# provifact

./: .editorconfig  .env.example  .gitattributes  .gitignore  .oxlintrc.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  tsconfig.json  tsconfig.tests.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
baselines/: tmco-macos-cis-level1-demo-approval.json
docs/: _headers  architecture.md  audit-methodology.md  data-handling.md  evidence-dashboard.md  getting-started.md  index.md  judge-guide.md  live-demo.md  roadmap.md  security-model.md  settings-matrix.md  threat-model.md  videos.md
evidenceops/: __init__.py  __main__.py  cli.py  constants.py  demo.py  mission_demo.py
manifests/: microsoft-graph-permissions.v1.json
provifact/: __init__.py  __main__.py
schemas/: evidenceops-v1.schema.json  public-evidence.schema.json
scripts/: __init__.py  build_baseline_catalog.py  check_public_artifacts.py  check_secrets.py  promote_live_mission.py  report_public_counts.py  verify_cloudflare_deployment.py  verify_runtime_status.py
tests/: test_apple_provider.py  test_auth_and_transports.py  test_baseline_catalog.py  test_branding.py  test_cli.py  test_drift.py  test_intune_live.py  test_intune_provider.py  test_live_publication.py  test_mission.py  test_narrative.py  test_permissions_manifest.py  test_presentation.py  test_provider_mappings.py  test_publication.py  test_reporting.py  test_sanitization.py  test_scanners.py  test_schema_v1.py  test_versioned_drift.py  test_workflows.py
tests-worker/: worker.test.ts
(+84 files in other folders)
